--- a/src/componentes/it/main.njk
+++ b/src/componentes/it/main.njk
@@ -19,14 +19,14 @@
                     <p class="puesto">GRAFICO IMPAGINATORE a ALCAÑIZ FRESNO’S S.A.</p>
                     
                     <div>
-                        <p>Adetto all’impaginazione, specializzato nella creazione di gazzette  ufficiali e' nella loro edizione
-                            elettronica. <strong>Ho lavorato nei Bolletini Ufficiali del Senato di Spagna, Le Corti di Castilla y León e La
-                            Giunta di Castilla y León.</strong></p>
-                            
-                        <p>Il mio contributo è stato creare automatismi per InDesign attraverso JavaScript, che permettono di
-                            risparmiare molte ore di lavoro.</p>
+                        <p>Adetto all’impaginazione, specializzato nella creazione di gazzette ufficiali e' nella loro edizione elettronica.</p>
+                     
+                        <p>Anche mi ocupavo del montagio di compiuter e instalazione di software, creazione di templates e gli stiti necesarie, tester delle risorse tegnologie, formazione dell team di lavoro per le garantizare la acesibilita e il optimo modo di lavoro e problem solving.</p>
 
-                        <p>creazioni di temi, styli, garanzitar la acesibilidad, estudio de las necesidades per il correto funzionamiento</p>
+                        <p> Per rendere piu veloce e facile il lavoro, ho creato automatismnDesign attraverso JavaScript, che permettono di risparmiare molte ore di lavoro.</p>
+
+                        <p>Ho lavorato nei Bolletini Ufficiali del Senato di Spagna, Le Corti di Castilla y León e La  Giunta di Castilla y León tra altri.</p>
+                        
 
                     </div>
                 </div>
@@ -61,8 +61,8 @@
                     </div>
                     <p class="puesto">Maestro Nuoto a A.S.D. Pinna-Sub San Vito <spam class="tag2">Voluntario</spam></p>
                 
-                    <p>Istruttore di nuoto con persone di diversa eta e  </p>
-                    <p>Creazione ocasionali di volantini</p>
+                    <p>Allenatore di nuoto con utenti di eta e capazita diverse. </p>
+                    <p>anche colavoroCreazione ocasionali di volantini</p>
                 </div>
             </article>
         </section> <!-- fin experiencia -->
@@ -73,9 +73,9 @@
         <section class="personal section">
                 <h2 class="titulo-grande">Su di me</h2>
                 <div class="texto">
-                    <p>Ciao! Sono un giovane spagnolo con dieci anni di esperienza nel settore delle arti grafiche. Mi considero una persona efficiente e attenta ai dettagli.</p>
+                    <p>Ciao! sono Andrés, un giovane spagnolo con dieci anni di esperienza nel settore delle arti grafiche. Mi considero una persona efficiente e attenta ai dettagli.</p>
                     <p>Vorrei crescere professionalmente nel ambito de la grafica e dell web, continuare ad imparare ma anche mettere in pratica le mie conoscenze.</p>
-                    <p>Sono una persona creativa e curiosa, </p>
+                    <p>Sono una persona creativa e curiosa, mi piace imparare nuovi programi e tegnologie de manera autodidacta.</p>
                 </div>
         </section>   <!-- fin personal -->
 
@@ -88,7 +88,7 @@
                 <div class="tag">Illustrator</div>
                 <div class="tag">Indesing</div>
                 <div class="tag">HTLM &amp; CSS</div>
-                <div class="tag">Git</div>
+                {# <div class="tag">Git</div> #}
                 <div class="tag">GREP</div>
                 <div class="tag">OCR</div>
                 <div class="tag">Stampa digitale</div>
