--- a/src/index.njk
+++ b/src/index.njk
@@ -18,9 +18,6 @@
     {% include "./componentes/it/main.njk" %}
     {% include "./componentes/it/footer.njk" %}
 
-    <div class="autorizo">
-        <small>Autorizzo il trattamento dei miei dati personali ai sensi del Dlgs 196 del 30 giugno 2003.</small>
-    </div>
 
     
     <div class="thiscv">
@@ -31,10 +28,18 @@
           <a href="https://andfres.github.io/cv/" class="code">
               https://andfres.github.io/cv/
           </a>
-      </spam></small>
+      </spam>
+      </small>
     </div>
 
-  </div>
+
+
+    <div class="autorizo">
+        <small>Autorizzo il trattamento dei miei dati personali ai sensi del Dlgs 196 del 30 giugno 2003.</small>
+    </div>
+
+
+  </div> <!-- end box container -->
 
 {% endblock %}
 
