--- a/css/header.css
+++ b/css/header.css
@@ -36,8 +36,9 @@ header {
     margin-bottom: 20px;
     white-space: wrap; }
   .titulos h2 {
-    font-size: 1em;
-    font-family: Arial, Helvetica, sans-serif;
+    font-size: 19px;
+    font-family: 'Fredoka One', cursive;
+    font-size: 100;
     white-space: nowrap;
     margin-bottom: 20px; }
 
