--- a/css/page.css
+++ b/css/page.css
@@ -11,7 +11,7 @@ body {
   margin: auto;
   align-content: center;
   background-color: whitesmoke;
-  background-color: red;
+  background-image: linear-gradient(45deg, #6f47ed 0%, #6f47ed 21%, #655ce9 21%, #655ce9 30%, #5b70e5 30%, #5b70e5 35%, #5285e2 35%, #5285e2 51%, #489ade 51%, #489ade 72%, #3eaeda 72%, #3eaeda 81%, #34c3d6 81%, #34c3d6 100%);
   min-width: 300px;
   max-width: 794px; }
 
@@ -29,15 +29,14 @@ body {
   font-family: arial;
   margin-top: 10px;
   position: relative;
-  display: inline-block;
+  display: block;
   background-color: white;
   background-color: #f0f0f0; }
 
 @media (min-width: 794px) {
   .box-container {
     height: 1123px;
-    padding-right: 25px;
-    padding-left: 25px; }
+    padding: 30px; }
   html {
     padding-top: 50px;
     padding-bottom: 50px; }
