--- a/docs/css/cursos.css
+++ b/docs/css/cursos.css
@@ -13,6 +13,6 @@
 .curso-nombre {
   font-weight: bolder; }
 
-@media (min-width: 755px) {
+@media screen and (min-width: 755px) {
   .cursos {
     grid-template-columns: auto auto; } }
