--- a/docs/css/estilo.css
+++ b/docs/css/estilo.css
@@ -6,13 +6,13 @@
 body * {
   margin: 0;
   padding: 0;
-  font-family: arial; }
+  font-family: arial, sans-serif; }
 
 body {
   margin: auto;
   align-content: center;
   background-color: whitesmoke;
-  background-color: red;
+  background-image: linear-gradient(45deg, #6f47ed 0%, #6f47ed 21%, #655ce9 21%, #655ce9 30%, #5b70e5 30%, #5b70e5 35%, #5285e2 35%, #5285e2 51%, #489ade 51%, #489ade 72%, #3eaeda 72%, #3eaeda 81%, #34c3d6 81%, #34c3d6 100%);
   min-width: 300px;
   max-width: 794px; }
 
@@ -27,18 +27,17 @@ body {
 
 .section {
   padding: 10px;
-  font-family: arial;
+  font-family: arial, sans-serif;
   margin-top: 10px;
   position: relative;
-  display: inline-block;
+  display: block;
   background-color: white;
   background-color: #f0f0f0; }
 
 @media (min-width: 794px) {
   .box-container {
     height: 1123px;
-    padding-right: 25px;
-    padding-left: 25px; }
+    padding: 30px; }
   html {
     padding-top: 50px;
     padding-bottom: 50px; }
@@ -81,14 +80,15 @@ header {
   margin-top: 10px; }
   .titulos .nombre {
     font-size: 2em;
-    font-family: 'Permanent Marker', cursive;
+    font-family: "Permanent Marker", sans-serif;
     line-height: 1em;
     margin-top: 10px;
     margin-bottom: 20px;
     white-space: wrap; }
   .titulos h2 {
-    font-size: 1em;
-    font-family: Arial, Helvetica, sans-serif;
+    font-size: 19px;
+    font-family: 'Fredoka One', cursive;
+    font-size: 100;
     white-space: nowrap;
     margin-bottom: 20px; }
 
@@ -200,7 +200,7 @@ main {
   text-transform: uppercase;
   margin-bottom: 10px;
   font-size: 1.2em;
-  font-family: 'Permanent Marker',cursive;
+  font-family: "Permanent Marker", sans-serif;
   padding-left: -5px; }
 
 .empresa {
@@ -281,46 +281,50 @@ main p, footer p {
 .curso-nombre {
   font-weight: bolder; }
 
-@media (min-width: 755px) {
+@media screen and (min-width: 755px) {
   .cursos {
     grid-template-columns: auto auto; } }
 
 .autorizo {
-  padding: 5px;
-  position: absolute;
-  font-size: 12px;
-  bottom: 7px;
-  right: 10px; }
+  padding: 4px;
+  position: static;
+  font-size: 12px; }
 
 .thiscv {
-  padding: 5px;
+  padding: 4px;
   position: static;
-  font-size: 14px;
+  font-size: 12px;
   background-color: white;
-  border: 0.8px solid grey;
+  border: 0.7px solid grey;
   border-radius: 6px;
   width: 270px;
-  box-shadow: 2px 2px 1px grey;
-  margin-bottom: 10px;
-  border: 2px solid green; }
+  box-shadow: 2px 2px 1px grey; }
   .thiscv spam {
-    display: none;
-    border: 2px solid red; }
+    display: none; }
 
 @media (min-width: 794px) {
   .thiscv {
     position: absolute;
-    bottom: 5px;
-    left: 25px; } }
+    bottom: 0;
+    left: 0;
+    margin: 30px; }
+  .autorizo {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    margin: 30px; } }
 
 @media print {
+  @page {
+    size: A4 portrait;
+    margin: 0; }
   html {
     padding-top: 0;
     padding-bottom: 0; }
   .idiomas {
     display: none; }
   .box-container {
-    margin: 0;
+    padding: 30px;
     height: 1123px;
     width: 794px;
     box-shadow: none; }
@@ -328,4 +332,9 @@ main p, footer p {
     width: 794px;
     height: 1123px;
     background-color: transparent;
-    -webkit-print-color-adjust: exact; } }
+    background-image: none; }
+  .thiscv spam {
+    display: initial; }
+  .section, header {
+    background-color: transparent;
+    overflow: hidden; } }
