--- a/scss/header.scss
+++ b/scss/header.scss
@@ -7,7 +7,7 @@ header {
     //border-radius: 20px;
 }
 
-
+    
 .me {
     order: 2;
     flex-grow: 1;
@@ -43,7 +43,7 @@ header {
 
     & .nombre {
         font-size: 2em;
-        font-family: 'Permanent Marker', cursive;
+        font-family: $title_font;
         line-height: 1em;
 
         margin-top: 10px;
@@ -52,14 +52,26 @@ header {
         //border: 2px solid red;
     }
 
+    
     & h2 {
-        font-size: 1em;
-        font-family: Arial, Helvetica, sans-serif;
+        font-size: 19px;
+        //font-family: Arial, Helvetica, sans-serif;
+
+         font-family: 'Fredoka One',
+         cursive;
+         
+         font-size: 100;
         white-space: nowrap;
         margin-bottom: 20px;
         //border: 2px solid red;
     }
 }
+
+
+// Audiowide
+// Baloo+Bhai
+// Carter+One
+// Gochi+Hand
 
 
 .links {
