--- a/scss/main.scss
+++ b/scss/main.scss
@@ -60,7 +60,10 @@ main {
     text-transform: uppercase;
     margin-bottom: $margen;
     font-size: 1.2em;
-    font-family: 'Permanent Marker',cursive;
+
+    font-family: $title_font;
+
+    
     padding-left: -5px;
     //border-bottom: 2px solid black;
     //color: grey;
