--- a/scss/page.scss
+++ b/scss/page.scss
@@ -6,11 +6,10 @@
 }
 
 
-
 body * {
     margin: 0;
     padding: 0;
-    font-family: arial;
+    font-family: $main_font;
 }
 
 body {
@@ -18,8 +17,8 @@ body {
     margin: auto;
     align-content: center;
     background-color: rgb(245, 245, 245);
-    background-color: red;
-    //background-image:linear-gradient(45deg, rgb(111, 71, 237) 0%, rgb(111, 71, 237) 21%,rgb(101, 92, 233) 21%, rgb(101, 92, 233) 30%,rgb(91, 112, 229) 30%, rgb(91, 112, 229) 35%,rgb(82, 133, 226) 35%, rgb(82, 133, 226) 51%,rgb(72, 154, 222) 51%, rgb(72, 154, 222) 72%,rgb(62, 174, 218) 72%, rgb(62, 174, 218) 81%,rgb(52, 195, 214) 81%, rgb(52, 195, 214) 100%) ;
+    //background-color: red;
+    background-image:linear-gradient(45deg, rgb(111, 71, 237) 0%, rgb(111, 71, 237) 21%,rgb(101, 92, 233) 21%, rgb(101, 92, 233) 30%,rgb(91, 112, 229) 30%, rgb(91, 112, 229) 35%,rgb(82, 133, 226) 35%, rgb(82, 133, 226) 51%,rgb(72, 154, 222) 51%, rgb(72, 154, 222) 72%,rgb(62, 174, 218) 72%, rgb(62, 174, 218) 81%,rgb(52, 195, 214) 81%, rgb(52, 195, 214) 100%) ;
 
     min-width: 300px;
     max-width: 794px;
@@ -43,12 +42,12 @@ body {
 
 .section {
     padding: 10px;
-    font-family: arial;
+    font-family: $main_font;
     margin-top: 10px;
 
     //border: 2px solid red;
     position: relative;
-    display: inline-block;
+    display: block;
 
     background-color: white;
     background-color: rgb(240, 240, 240);
@@ -65,9 +64,7 @@ body {
 @media  (min-width: 794px) {
     .box-container {
         height: 1123px;
-        //border-bottom: 3px solid green;
-        padding-right: 25px;
-        padding-left: 25px;
+        padding: 30px;
     }
 
     html {
