--- a/src/componentes/it/footer.njk
+++ b/src/componentes/it/footer.njk
@@ -4,20 +4,39 @@
     <section class="formacion section">
         <h2 class="titulo-grande">Formazione</h2>
         <div class="cursos">
+
+            <div class="curso">
+                <p class="curso-nombre">Educazione Superiore, disegno tecnico e informatica</p>
+                <div class="curso-info">
+                    <p class="curso-lugar">I.E.S. Pinar de la Rubia</p>
+                    <p class="curso-fecha">2001 - 2005</p>
+                </div>
+            </div>
+
+
             <div class="curso">
                 <p class="curso-nombre">Corso creazione Siti Web (240h)</p>
                 <div class="curso-info">
                     <p class="curso-lugar">Csg.lab - Centro di Formazione Professionale</p>
-                    <p class="curso-fecha">Settembre 2019 - Gennaio 2020</p>
+                    <p class="curso-fecha">Setembre 2019 - Genario 2020</p>
                 </div>
             </div>
             <div class="curso">
-                <p class="curso-nombre">Corso introduzione allo sviluppo Web (40h)</p>
+                <p class="curso-nombre">Corso Introduzione allo sviluppo Web (80h)</p>
                 <div class="curso-info">
                     <p class="curso-lugar">Grow with google</p>
                     <p class="curso-fecha">Novembre 2018</p>
                 </div>
             </div>
+
+            <div class="curso">
+                <p class="curso-nombre">Corso Creazione documenti elettronici accessibili</p>
+                <div class="curso-info">
+                    <p class="curso-lugar">ILUNION / Fundación ONCE</p>
+                    <p class="curso-fecha">Marzo 2017</p>
+                </div>
+            </div>
+
             <div class="curso">
                 <p class="curso-nombre">Corso bagnino</p>
                 <div class="curso-info">
@@ -31,16 +50,11 @@
                 <p class="curso-nombre">Corso instructore nuoto livelo I.</p>
                 <div class="curso-info">
                     <p class="curso-lugar">Fipsas</p>
-                    <p class="curso-fecha">Novembre 2019 - Gennaio 2020 </p>
+                    <p class="curso-fecha">Novembre 2019</p>
                 </div>
             </div>
-            <div class="curso">
-                <p class="curso-nombre">Corso Creazione documenti elettronici accessibili</p>
-                <div class="curso-info">
-                    <p class="curso-lugar">ILUNION / Fundación ONCE</p>
-                    <p class="curso-fecha">Marzo 2017</p>
-                </div>
-            </div>
+
+
 
 {# 
             <div class="curso">
@@ -51,14 +65,8 @@
                 </div>
             </div> #}
 
-            
-            <div class="curso">
-                <p class="curso-nombre">Educazione Superiore, disegno tecnico e informatica</p>
-                <div class="curso-info">
-                    <p class="curso-lugar">I.E.S. Pinar de la Rubia</p>
-                    <p class="curso-fecha">2001 - 2005</p>
-                </div>
-            </div>
+
+         
         </div> <!-- fin cursos -->
     </section> <!-- fin formacion -->
     
