--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -7,6 +7,7 @@
 $main_font: arial,
 sans-serif;
 $title_font: 'Permanent Marker',sans-serif;
+$tam_font: 13px;
 
 @import 'page';
 @import 'header';
