--- a/src/componentes/header.njk
+++ b/src/componentes/header.njk
@@ -3,7 +3,7 @@
     <div class="idiomas">
 
         {% if lengua !== "en" %}
-            <a href="#">Enghish</a>
+            <a href="#">English</a>
         {% endif %}
 
         {% if lengua !== "es" %}
