--- a/src/componentes/it/footer.njk
+++ b/src/componentes/it/footer.njk
@@ -1,7 +1,7 @@
 
 <footer class="footer">
 
-    <section class="formacion section">
+    <section class="formacione section">
         <h2 class="titulo-grande">Formazione</h2>
         <div class="cursos">
 
@@ -21,6 +21,7 @@
                     <p class="curso-fecha">Setembre 2019 - Genario 2020</p>
                 </div>
             </div>
+            
             <div class="curso">
                 <p class="curso-nombre">Corso Introduzione allo sviluppo Web (80h)</p>
                 <div class="curso-info">
@@ -46,11 +47,13 @@
                     <p class="curso-fecha">Novembre 2017</p>
                 </div>
             </div>
+
+
             <div class="curso">
-                <p class="curso-nombre">Corso instructore nuoto livelo I.</p>
+                <p class="curso-nombre">Corso istruttore nuoto livelo I.</p>
                 <div class="curso-info">
-                    <p class="curso-lugar">Fipsas</p>
-                    <p class="curso-fecha">Novembre 2019</p>
+                    <p class="curso-lugar">FIPSAS</p>
+                    <p class="curso-fecha">Novembre 2019 - Genario 2020</p>
                 </div>
             </div>
 
