--- a/src/componentes/it/main.njk
+++ b/src/componentes/it/main.njk
@@ -21,9 +21,9 @@
                     <div>
                         <p>Adetto all’impaginazione, specializzato nella creazione di gazzette ufficiali e' nella loro edizione elettronica.</p>
                      
-                        <p>Anche mi ocupavo del montagio di compiuter e instalazione di software, creazione di templates e gli stiti necesarie, tester delle risorse tegnologie, formazione dell team di lavoro per le garantizare la acesibilita e il optimo modo di lavoro e problem solving.</p>
+                        <p>Inoltre mi ocupavo dell montagio dei computer e instalazione di software, creazione di templates e gli stiti necesarie, tester delle risorse tegnologie, formazione dell team di lavoro per le garantizare la acesibilita e il optimo modo di lavoro e problem solving.</p>
 
-                        <p> Per rendere piu veloce e facile il lavoro, ho creato automatismnDesign attraverso JavaScript, che permettono di risparmiare molte ore di lavoro.</p>
+                        <p> Per rendere piu veloce e facile il lavoro ho creato automatismi per inDesign attraverso JavaScript, che permettono di risparmiare molte ore di lavoro.</p>
 
                         <p>Ho lavorato nei Bolletini Ufficiali del Senato di Spagna, Le Corti di Castilla y León e La  Giunta di Castilla y León tra altri.</p>
                         
@@ -44,7 +44,7 @@
                     </div>
                     <p class="puesto">OPERAIO in FRIULINTAGLI <spam class="tag2">3 turni</spam></p>
                     <div>
-                        <p>Carico e gestione di macchina di assemblaggio e foratice di ante. Questo lavoro mi ha permeso di migiore la lingua Italiana.</p>
+                        <p>Carico e gestione di macchina di assemblaggio e foratice di ante. Questo lavoro mi datto la posibilità di migiore l'italiano.</p>
                     </div>
                 </div>
                 </article>
@@ -61,8 +61,8 @@
                     </div>
                     <p class="puesto">Maestro Nuoto a A.S.D. Pinna-Sub San Vito <spam class="tag2">Voluntario</spam></p>
                 
-                    <p>Allenatore di nuoto con utenti di eta e capazita diverse. </p>
-                    <p>anche colavoroCreazione ocasionali di volantini</p>
+                    <p>Allenatore di nuoto con utenti di eta e capazita diverse, me permete di continuare da migiorare le mie competencze comunicative. </p>
+                    {# <p>anche colavoro ocasionalmente con la creazione di volantini</p> #}
                 </div>
             </article>
         </section> <!-- fin experiencia -->
