--- a/docs/css/print.css
+++ b/docs/css/print.css
@@ -16,9 +16,11 @@
     width: 794px;
     height: 1123px;
     background-color: transparent;
-    background-image: none; }
+    background-image: none;
+    -webkit-print-color-adjust: exact; }
+  .section, header {
+    background-color: transparent; }
   .thiscv spam {
     display: initial; }
-  .section, header {
-    background-color: transparent;
-    overflow: hidden; } }
+  .cursos {
+    grid-template-columns: auto auto; } }
