--- a/scss/info.scss
+++ b/scss/info.scss
@@ -27,12 +27,12 @@
     }
 }
 
-@media (min-width: 794px) {
+@media print, (min-width: 794px) {
 
     .thiscv {
         position: absolute;
         bottom: 0;
-        left: 0;
+        right: 0;
         margin: 30px;
     }
 
@@ -40,7 +40,7 @@
 
         position: absolute;
         bottom: 0;
-        right: 0;
+        left: 0;
         margin: 30px;
     }
 
