--- a/scss/info.scss
+++ b/scss/info.scss
@@ -10,12 +10,12 @@
 .thiscv{
     padding: 4px;
     position: static;
-    font-size: 12px;
+    font-size: 13px;
     background-color: white;
     border: 0.7px solid grey;
     border-radius: 6px;
 
-    width: 270px;
+    //width: 270px;
     box-shadow: 2px 2px 1px grey;
     //margin: 30px;
     
