--- a/src/componentes/it/footer.njk
+++ b/src/componentes/it/footer.njk
@@ -18,7 +18,7 @@
                 <p class="curso-nombre">Corso creazione Siti Web (240h)</p>
                 <div class="curso-info">
                     <p class="curso-lugar">Csg.lab - Centro di Formazione Professionale</p>
-                    <p class="curso-fecha">Setembre 2019 - Genario 2020</p>
+                    <p class="curso-fecha">Settembre 2019 - Gennaio 2020</p>
                 </div>
             </div>
             
@@ -50,7 +50,7 @@
 
 
             <div class="curso">
-                <p class="curso-nombre">Corso istruttore nuoto livelo I.</p>
+                <p class="curso-nombre">Corso istruttore di nuoto</p>
                 <div class="curso-info">
                     <p class="curso-lugar">FIPSAS</p>
                     <p class="curso-fecha">Novembre 2019 - Genario 2020</p>
