--- a/src/index.njk
+++ b/src/index.njk
@@ -1,6 +1,6 @@
 ---
 "lengua": "it"
-"posicion": "Web Design"
+"posicion": "Web Designer"
 "espana" : "Spagna"
 "nacido" : "nato a"
 ---
@@ -21,7 +21,7 @@
 
     
     <div class="thiscv">
-      <small>Per la creazione di questo curriculm ho usato: HTML5 & SASS e nunjucks come template engine.
+      <small>Per la creazione di questo curriculm ho usato:<br> HTML5 & SASS e nunjucks come template engine.
       <spam><br>
       Puoi vederlo online:
 
