--- a/docs/css/skills.css
+++ b/docs/css/skills.css
@@ -14,5 +14,7 @@
   margin: 5px; }
 
 .tag2 {
-  margin: 0 5px;
-  font-weight: normal; }
+  margin: 0 4px;
+  font-weight: normal;
+  padding: 2px 8px;
+  font-size: 11px; }
