--- a/src/componentes/it/main.njk
+++ b/src/componentes/it/main.njk
@@ -13,19 +13,23 @@
                 <div class="texto">
                     <!-- <h3 class="empresa">ALCAÑIZ FRESNO’S S.A.</h3> -->
                     <div class="info">
-                        <p class="fecha">2011 - nombembre 2017</p>
+                        <p class="fecha">2011 - novembre 2017</p>
                         <p class="lugar">Valladolid, Spagna</p>
                     </div>
-                    <p class="puesto">GRAFICO IMPAGINATORE a ALCAÑIZ FRESNO’S S.A.</p>
+                    <p class="puesto">GRAFICO IMPAGINATORE - ALCAÑIZ FRESNO’S S.A.</p>
                     
                     <div>
-                        <p>Adetto all’impaginazione, specializzato nella creazione di gazzette ufficiali e' nella loro edizione elettronica.</p>
+                        <p>Impaginatore specializzato nella creazione di gazzette ufficiali e nella loro edizione elettronica.</p>
+
+                        <p>Tester delle risorse tecnologiche,
+                        e creatore di automatismi per inDesign attraverso JavaScript, che permettono di risparmiare molte ore di lavoro.</p>
+
+                        <p>Coordinatore del team di lavoro e problem solving.</p>
                      
-                        <p>Inoltre mi ocupavo dell montagio dei computer e instalazione di software, creazione di templates e gli stiti necesarie, tester delle risorse tegnologie, formazione dell team di lavoro per le garantizare la acesibilita e il optimo modo di lavoro e problem solving.</p>
-
-                        <p> Per rendere piu veloce e facile il lavoro ho creato automatismi per inDesign attraverso JavaScript, che permettono di risparmiare molte ore di lavoro.</p>
-
-                        <p>Ho lavorato nei Bolletini Ufficiali del Senato di Spagna, Le Corti di Castilla y León e La  Giunta di Castilla y León tra altri.</p>
+                        <p>Addetto al montaggio dei computer, all'installazione di software e alla creazione di templates e degli stili necessari.</p>
+                        
+ 
+                        <p>Ho lavorato nei Bolletini Ufficiali del Senato di Spagna, delle Corti di Castiglia e León e della Giunta di Castiglia e León tra altri.</p>
                         
 
                     </div>
@@ -42,9 +46,9 @@
                         <p class="fecha">Luglio 2018 - Giugnio 2019</p>
                         <p class="lugar">Prata di Pordenone, Italia</p>
                     </div>
-                    <p class="puesto">OPERAIO in FRIULINTAGLI <spam class="tag2">3 turni</spam></p>
+                    <p class="puesto">OPERAIO - FRIULINTAGLI <spam class="tag2">3 turni</spam></p>
                     <div>
-                        <p>Carico e gestione di macchina di assemblaggio e foratice di ante. Questo lavoro mi datto la posibilità di migiore l'italiano.</p>
+                        <p>Carico e gestione di macchina di assemblaggio e foratrice di ante. Questo lavoro mi dato la possibilità di migliorare l'italiano.</p>
                     </div>
                 </div>
                 </article>
@@ -59,9 +63,9 @@
                         <p class="fecha">Septembre 2019</p>
                         <p class="lugar">San Vito al Tagliamento, Italia</p>
                     </div>
-                    <p class="puesto">Maestro Nuoto a A.S.D. Pinna-Sub San Vito <spam class="tag2">Voluntario</spam></p>
+                    <p class="puesto">Maestro di nuoto - A.S.D. Pinna-Sub San Vito <spam class="tag2">Volontario</spam></p>
                 
-                    <p>Allenatore di nuoto con utenti di eta e capazita diverse, me permete di continuare da migiorare le mie competencze comunicative. </p>
+                    <p>Allenatore di nuoto con utenti di età e capacità diverse, che mi permette di continuare a migliorare le mie competenze comunicative. </p>
                     {# <p>anche colavoro ocasionalmente con la creazione di volantini</p> #}
                 </div>
             </article>
@@ -74,15 +78,17 @@
                 <h2 class="titulo-grande">Su di me</h2>
                 <div class="texto">
                     <p>Ciao! sono Andrés, un giovane spagnolo con dieci anni di esperienza nel settore delle arti grafiche. Mi considero una persona efficiente e attenta ai dettagli.</p>
-                    <p>Vorrei crescere professionalmente nel ambito de la grafica e dell web, continuare ad imparare ma anche mettere in pratica le mie conoscenze.</p>
-                    <p>Sono una persona creativa e curiosa, mi piace imparare nuovi programi e tegnologie de manera autodidacta.</p>
+                    
+                    <p>Vorrei crescere professionalmente nell'ambito della grafica e del web, continuare ad imparare ma anche mettere in pratica le mie conoscenze.</p>
+                    
+                    <p>Sono una persona creativa e curiosa, mi piace imparare nuovi programmi e tegnologie anche da autodidatta.</p>
                 </div>
         </section>   <!-- fin personal -->
 
 
         <section class="skills section">
             <h2 class="titulo-grande">Skills</h2>
-            <p>Tecnologie che controlo:</p>
+            <p>Tecnologie che controllo:</p>
             <div class="tags">
                 <div class="tag">Photoshop</div>
                 <div class="tag">Illustrator</div>
