--- a/src/componentes/it/footer.njk
+++ b/src/componentes/it/footer.njk
@@ -53,7 +53,7 @@
                 <p class="curso-nombre">Corso istruttore di nuoto</p>
                 <div class="curso-info">
                     <p class="curso-lugar">FIPSAS</p>
-                    <p class="curso-fecha">Novembre 2019 - Genario 2020</p>
+                    <p class="curso-fecha">Novembre 2019 - Gennaio 2020</p>
                 </div>
             </div>
 
