--- a/src/componentes/it/main.njk
+++ b/src/componentes/it/main.njk
@@ -13,7 +13,7 @@
                 <div class="texto">
                     <!-- <h3 class="empresa">ALCAÑIZ FRESNO’S S.A.</h3> -->
                     <div class="info">
-                        <p class="fecha">2011 - novembre 2017</p>
+                        <p class="fecha">2008 - novembre 2017</p>
                         <p class="lugar">Valladolid, Spagna</p>
                     </div>
                     <p class="puesto">GRAFICO IMPAGINATORE - ALCAÑIZ FRESNO’S S.A.</p>
@@ -22,14 +22,14 @@
                         <p>Impaginatore specializzato nella creazione di gazzette ufficiali e nella loro edizione elettronica.</p>
 
                         <p>Tester delle risorse tecnologiche,
-                        e creatore di automatismi per inDesign attraverso JavaScript, che permettono di risparmiare molte ore di lavoro.</p>
+                        e creatore di automatismi per <strong>inDesign</strong> attraverso <strong>JavaScript</strong>, che permettono di risparmiare molte ore di lavoro.</p>
 
                         <p>Coordinatore del team di lavoro e problem solving.</p>
                      
                         <p>Addetto al montaggio dei computer, all'installazione di software e alla creazione di templates e degli stili necessari.</p>
                         
  
-                        <p>Ho lavorato nei Bolletini Ufficiali del Senato di Spagna, delle Corti di Castiglia e León e della Giunta di Castiglia e León tra altri.</p>
+                        <p>Ho lavorato nei Bollettini Ufficiali del Senato di Spagna, delle Corti di Castiglia e León e della Giunta di Castiglia e León tra altri.</p>
                         
 
                     </div>
@@ -43,7 +43,7 @@
                 <div class="texto">
                     <!-- <h3 class="empresa">FRIULINTAGLI</h3> -->
                     <div class="info">
-                        <p class="fecha">Luglio 2018 - Giugnio 2019</p>
+                        <p class="fecha">Luglio 2018 - Giugno 2019</p>
                         <p class="lugar">Prata di Pordenone, Italia</p>
                     </div>
                     <p class="puesto">OPERAIO - FRIULINTAGLI <spam class="tag2">3 turni</spam></p>
@@ -60,7 +60,7 @@
                 <div class="texto">
                     <!-- <h3 class="empresa">A.S.D. Pinna-Sub San Vito</h3> -->
                     <div class="info">
-                        <p class="fecha">Septembre 2019</p>
+                        <p class="fecha">Settembre 2019 - att.</p>
                         <p class="lugar">San Vito al Tagliamento, Italia</p>
                     </div>
                     <p class="puesto">Maestro di nuoto - A.S.D. Pinna-Sub San Vito <spam class="tag2">Volontario</spam></p>
@@ -81,7 +81,7 @@
                     
                     <p>Vorrei crescere professionalmente nell'ambito della grafica e del web, continuare ad imparare ma anche mettere in pratica le mie conoscenze.</p>
                     
-                    <p>Sono una persona creativa e curiosa, mi piace imparare nuovi programmi e tegnologie anche da autodidatta.</p>
+                    <p>Sono una persona creativa e curiosa, mi piace imparare nuovi programmi e tecnologie anche da autodidatta.</p>
                 </div>
         </section>   <!-- fin personal -->
 
