--- a/src/componentes/base.njk
+++ b/src/componentes/base.njk
@@ -1,11 +1,11 @@
 
 {# {%set prefijo = "file:///C:/Users/fresno/Desktop/web/cv/docs"%}
 
-{%set prefijo = ""%} #}
+ #}
+
+
+{%set prefijo = ""%}
 {%set prefijo = "https://andfres.github.io/cv"%}
-
-
-
 <!DOCTYPE HTML>
 <html>
 
