--- a/docs/css/header.css
+++ b/docs/css/header.css
@@ -30,7 +30,6 @@ header {
   margin-top: 10px; }
   .titulos .nombre {
     font-size: 2em;
-    font-family: 'Permanent Marker', cursive;
     line-height: 1em;
     margin-top: 10px;
     margin-bottom: 20px;
@@ -87,7 +86,7 @@ header {
   margin-left: auto;
   margin-right: auto; }
 
-@media (min-width: 620px) {
+@media print, (min-width: 620px) {
   header {
     flex-wrap: nowrap; }
   .me {
@@ -106,7 +105,8 @@ header {
   position: absolute;
   right: 0;
   top: -15px;
-  font-size: 13px; }
+  font-size: 13px;
+  display: none; }
   .idiomas a {
     color: grey;
     text-decoration: none;
