primer comit  lienígena

--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -4,8 +4,7 @@
 
 
 //$main_font: 'Baloo Bhaijaan', sans-serif;
-$main_font: arial,
-sans-serif;
+$main_font: arial, sans-serif;
 $title_font: 'Permanent Marker',sans-serif;
 $tam_font: 13px;
 
