--- a/src/componentes/base.njk
+++ b/src/componentes/base.njk
@@ -3,9 +3,9 @@
 
  #}
 
+{# {%set prefijo = "https://andfres.github.io/cv"%} #}
+{# {%set prefijo = "."%} #}
 
-{%set prefijo = ""%}
-{%set prefijo = "https://andfres.github.io/cv"%}
 <!DOCTYPE HTML>
 <html>
 
