--- a/src/componentes/es/main.njk
+++ b/src/componentes/es/main.njk
@@ -1,95 +1,116 @@
 <main class="main">        
-    <h1>main en español</h1>
+
     <!-- row1 -->
-    {# <div class="row1">
+    <div class="row1">
         <section class="experiencia section">    
-            <h2 class="titulo-grande" >Esperienza Lavorativa</h2>
+            <h2 class="titulo-grande" >Esperiencia Profesional</h2>
             
             <article class="job">
                 <div class="logo">
-                    <img src="../img/logo_af.png">
+                    <img src="{{ prefijo }}/img/logo_af.png">
                 </div>
                 
                 <div class="texto">
                     <!-- <h3 class="empresa">ALCAÑIZ FRESNO’S S.A.</h3> -->
                     <div class="info">
-                        <p class="fecha">2011 - nombembre 2017</p>
-                        <p class="lugar">Valladolid, Spagna</p>
+                        <p class="fecha">2008 - noviembre 2017</p>
+                        <p class="lugar">Valladolid, España</p>
                     </div>
-                    <p class="puesto">GRAFICO IMPAGINATORE a ALCAÑIZ FRESNO’S S.A.</p>
+                    <p class="puesto">MAQUETADOR - ALCAÑIZ FRESNO’S</p>
                     
                     <div>
-                        <p>Adetto all’impaginazione, specializzato nella creazione di gazzette ufficiali e' nella loro edizione
-                            elettronica. Ho lavorato nei Bolletini Ufficiali del Senato di Spagna, Le Corti di Castilla y León e La
-                            Giunta di Castilla y León.</p>
-                            
-                        <p>Il mio contributo è stato creare automatismi per InDesign attraverso JavaScript, che permettono di
-                            risparmiare molte ore di lavoro.</p>
-                        <p>he hecho otros trabajos al interno de la empresa Stampa digitale, stampa lastre per macchine per Stampa digitale, stampa lastre per macchine offset (CTP),
-                            processo completo di rilegatura, amministrazione sito web, magazziniere e consegne.</p>
+                        <p>Alcañiz Fresno's es una empresa dedicada a las artes graficas, hace la vez de editorial como de imprenta.</p>
+                        <p>Mi función era la de maquetador, especializado en la creación de boletines oficiales y en su edicion electronica. He trabajado en los boletines oficiales del Senado, Cortes de Castilla y León, Junta de Castilla y León entre otros.<p>
+
+
+
+                        {# <p>Entre mis funciones estaban las de
+                         Coordinador del equipo de trabajo con dotes para la resolución de problemas. 
+                         Encargado del montaje de equipos, instalación de sofware y a la creación de maquetas y estilos necesarios.</p> #}
+
+                        <p>Entre mis funciones estaban las de:
+                        Coordinador del equipo de trabajo con dotes para la resolución de problemas. 
+                        Soporte técnico físico. Creador de plantillas y tester de las aplicaciones personalizadas</p>
+                        <p>Mi mayor aportación a sido la creación de scripts para <strong>inDesign</strong> a través de <strong>JavaScript</strong> que permiten ahorrar muchas horas de trabajo.</p>
+
+                    
                     </div>
                 </div>
             </article>
+            
             <article class="job">
                 <div class="logo">
-                    <img src="../img/logo_fi.png">
+                    <img src="{{ prefijo }}/img/logo_fi.png">
                 </div>
                 <div class="texto">
                     <!-- <h3 class="empresa">FRIULINTAGLI</h3> -->
                     <div class="info">
-                        <p class="fecha">Luglio 2018 - Giugnio 2019</p>
+                        <p class="fecha">Julio 2018 - Junio 2019</p>
                         <p class="lugar">Prata di Pordenone, Italia</p>
                     </div>
-                    <p class="puesto">OPERAIO in FRIULINTAGLI</p>
+                    <p class="puesto">Operario de producción - FRIULINTAGLI <spam class="tag2">3 turnos</spam></p>
                     <div>
-                        <p>Carico e gestione di macchina di assemblaggio e foratice di ante.</p>
+                        <p>Friul Intagli Industries S.p.A. es la mayor productora de muebles del mundo, su principal cliente es IKEA.</p>
+
+                        <p>Mi labor consistia en la gestión de una máquina ensambladora de puertas de armarios, la carga de material y el control de calidad del producto, para lo cual debía trabajar con gran rapidez y eficacia.</p>
+
+                        <p>Este trabajo me ha permitido desarrollar mis habilidades de trabajo en equipo con personas de diferentes nacionalidades usando el italiano como lengua común.</p>
+
                     </div>
                 </div>
                 </article>
             
-            <article class="job">
+{#            <article class="job">
                 <div class="logo">
-                    <img  src="../img/logo_pinna.png">
+                    <img  src="{{ prefijo }}/img/logo_pinna.png">
                 </div>
+
                 <div class="texto">
                     <!-- <h3 class="empresa">A.S.D. Pinna-Sub San Vito</h3> -->
                     <div class="info">
-                        <p class="fecha">Septembre 2019</p>
+                        <p class="fecha">Settembre 2019 - att.</p>
                         <p class="lugar">San Vito al Tagliamento, Italia</p>
                     </div>
-                    <p class="puesto">Maestro Nuoto (part time) a A.S.D. Pinna-Sub San Vito </p>
+                    <p class="puesto">Maestro di nuoto - A.S.D. Pinna-Sub San Vito <spam class="tag2">Volontario</spam></p>
                 
-                    <p>Istruttore di nuoto da settembre 2019  </p>
-                    <p>Creazione ocasionali di volantini</p>
+                    <p>Allenatore di nuoto con utenti di età e capacità diverse, che mi permette di continuare a migliorare le mie competenze comunicative. </p>
+                     <p>anche colavoro ocasionalmente con la creazione di volantini</p>
                 </div>
             </article>
+
+            #}
         </section> <!-- fin experiencia -->
         
     </div> <!-- fin row1 -->
     <!-- row2 -->
     <div class="row2">
         <section class="personal section">
-                <h2 class="titulo-grande">Su di me</h2>
+                <h2 class="titulo-grande">Sobre mi</h2>
                 <div class="texto">
-                    <p>Sono un giovane spagnolo con dieci anni di esperienza nel settore delle arti grafiche. Mi considero una persona efficiente e attenta ai dettagli.</p>
-                    <p>Vorrei crescere professionalmente e personalmente, continuare ad imparare ma anche mettere in pratica le mie conoscenze.</p>
-                    <p>Sono una persona creativa, come hobby ho dei progetti presonali: faccio disegni digitali, scrivo storie.</p>
+                    <p>Hola, me llamo Andrés, soy un joven español con diez años de esperiencia en el sector de las artes graficas. Me considero una persona eficiente y atenta los detalles.</p>
+                    
+                    <p>Quisiera crecer profesionalmente en el sector del diseño gratico y del Web, seguir aprendiendo y poner en pratica mis conocimientos.</p>
+                    
+                    <p>Soy una persona creativa y curiosa, me gusta aprender nuevos programas y tecnologias de forma autodidacta.</p>
+
                 </div>
         </section>   <!-- fin personal -->
+
+
         <section class="skills section">
-            <h2 class="titulo-grande">Skills</h2>
-            <p>Tecnologie che controlo:</p>
+            <h2 class="titulo-grande">HABILIDADES</h2>
+            <p>Tecnologias que controlo:</p>
             <div class="tags">
                 <div class="tag">Photoshop</div>
                 <div class="tag">Illustrator</div>
                 <div class="tag">Indesing</div>
                 <div class="tag">HTLM &amp; CSS</div>
-                <div class="tag">Git</div>
+                {# <div class="tag">Git</div> #}
                 <div class="tag">GREP</div>
                 <div class="tag">OCR</div>
-                <div class="tag">Stampa digitale</div>
+                <div class="tag">Impresión digital</div>
             </div>
         </section> <!-- fin skills -->
-    </div> <!-- fin row2 --> #}
+    </div> <!-- fin row2 -->
 </main>
 
