--- a/src/es.njk
+++ b/src/es.njk
@@ -2,6 +2,7 @@
 "lengua": "es"
 "posicion": "creador web"
 "espana" : "España"
+"prefijo" : ".."
 ---
 
 {% extends "./componentes/base.njk" %}
@@ -16,6 +17,18 @@
     {% include "./componentes/es/main.njk" %}
     {% include "./componentes/es/footer.njk" %}
 
+    <div class="thiscv">
+      <small>Para la creación de este resumen he usado:<br> HTML5 & SASS y nunjucks como template engine.
+      <spam><br>
+      Puedes verlo online:
+
+        <a href="https://andfres.github.io/cv/" class="code">
+            https://andfres.github.io/cv/
+        </a>
+
+      </spam>
+      </small>
+    </div>
 
 
   </div>
