--- a/src/index.njk
+++ b/src/index.njk
@@ -3,6 +3,7 @@
 "posicion": "Web Designer"
 "espana" : "Spagna"
 "nacido" : "nato a"
+"prefijo" : "."
 ---
 
 {% extends "./componentes/base.njk" %}
