--- a/css/page.css
+++ b/css/page.css
@@ -5,7 +5,7 @@
 body * {
   margin: 0;
   padding: 0;
-  font-family: arial; }
+  font-family: arial, sans-serif; }
 
 body {
   margin: auto;
@@ -26,7 +26,7 @@ body {
 
 .section {
   padding: 10px;
-  font-family: arial;
+  font-family: arial, sans-serif;
   margin-top: 10px;
   position: relative;
   display: block;
