--- a/docs/css/estilo.css
+++ b/docs/css/estilo.css
@@ -87,7 +87,7 @@ header {
     white-space: wrap; }
   .titulos h2 {
     font-size: 19px;
-    font-family: 'Fredoka One', cursive;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 100;
     white-space: nowrap;
     margin-bottom: 20px; }
@@ -156,8 +156,7 @@ header {
   position: absolute;
   right: 0;
   top: -15px;
-  font-size: 13px;
-  display: none; }
+  font-size: 13px; }
   .idiomas a {
     color: grey;
     text-decoration: none;
