--- a/scss/page.scss
+++ b/scss/page.scss
@@ -9,7 +9,7 @@
 body * {
     margin: 0;
     padding: 0;
-    font-family: $main_font;
+    font-family: arial, sans-serif;
 }
 
 body {
@@ -42,7 +42,7 @@ body {
 
 .section {
     padding: 10px;
-    font-family: $main_font;
+    font-family: arial, sans-serif;
     margin-top: 10px;
 
     //border: 2px solid red;
