--- a/src/componentes/en/footer.njk
+++ b/src/componentes/en/footer.njk
@@ -2,11 +2,11 @@
 <footer class="footer">
 
     <section class="formacione section">
-        <h2 class="titulo-grande">Formación</h2>
+        <h2 class="titulo-grande">Formazione</h2>
         <div class="cursos">
 
             <div class="curso">
-                <p class="curso-nombre">Educación Secundaria</p>
+                <p class="curso-nombre">Educazione Superiore, disegno tecnico e informatica</p>
                 <div class="curso-info">
                     <p class="curso-lugar">I.E.S. Pinar de la Rubia</p>
                     <p class="curso-fecha">2001 - 2005</p>
@@ -15,23 +15,23 @@
 
 
             <div class="curso">
-                <p class="curso-nombre">Curso creación paginas web (240h)</p>
+                <p class="curso-nombre">Corso creazione Siti Web (240h)</p>
                 <div class="curso-info">
-                    <p class="curso-lugar">Csg.lab - Centro de Formación Profesional (Udine, Italia)</p>
-                    <p class="curso-fecha">Septiembre 2019 - Enero 2020</p>
+                    <p class="curso-lugar">Csg.lab - Centro di Formazione Professionale</p>
+                    <p class="curso-fecha">Settembre 2019 - Gennaio 2020</p>
                 </div>
             </div>
             
             <div class="curso">
-                <p class="curso-nombre">Corso introdución al desarroyo Web (80h)</p>
+                <p class="curso-nombre">Corso Introduzione allo sviluppo Web (80h)</p>
                 <div class="curso-info">
                     <p class="curso-lugar">Grow with google</p>
-                    <p class="curso-fecha">Noviembre 2018</p>
+                    <p class="curso-fecha">Novembre 2018</p>
                 </div>
             </div>
 
             <div class="curso">
-                <p class="curso-nombre">Curso creación de documentos electronicos accesibles</p>
+                <p class="curso-nombre">Corso Creazione documenti elettronici accessibili</p>
                 <div class="curso-info">
                     <p class="curso-lugar">ILUNION / Fundación ONCE</p>
                     <p class="curso-fecha">Marzo 2017</p>
@@ -39,23 +39,23 @@
             </div>
 
             <div class="curso">
-                <p class="curso-nombre">Curso Socorrismo</p>
+                <p class="curso-nombre">Corso bagnino</p>
                 <div class="curso-info">
                     <p class="curso-lugar">RFESS</p>
 
                     {# <p class="curso-lugar">La Real Federación Española de Salvamento y Socorrismo</p> #}
-                    <p class="curso-fecha">Noviembre 2017</p>
+                    <p class="curso-fecha">Novembre 2017</p>
                 </div>
             </div>
 
 
-            {# <div class="curso">
+            <div class="curso">
                 <p class="curso-nombre">Corso istruttore di nuoto</p>
                 <div class="curso-info">
                     <p class="curso-lugar">FIPSAS</p>
                     <p class="curso-fecha">Novembre 2019 - Gennaio 2020</p>
                 </div>
-            </div> #}
+            </div>
 
 
 
