--- a/src/componentes/header.njk
+++ b/src/componentes/header.njk
@@ -3,7 +3,8 @@
     <div class="idiomas">
 
         {% if lengua !== "en" %}
-            <a href="#">English</a>
+            {# <a href="#"></a> #}
+            <a href="{{ prefijo }}/en/index.html">English</a>
         {% endif %}
 
         {% if lengua !== "es" %}
@@ -38,8 +39,7 @@
 
             <div class="link">
                 <div class="svg"><img  src="{{ prefijo }}/img/lugar.svg"></div>
-                <p>San Vito al Tagliamento, <br>
-                Pordenone</p>
+                <p>Valladolid</p>
             </div>
             
             <div class="link">
