--- a/src/componentes/header.njk
+++ b/src/componentes/header.njk
@@ -3,16 +3,16 @@
     <div class="idiomas">
 
         {% if lengua !== "en" %}
-            {# <a href="#"></a> #}
+            {# <a href="#">English</a> #}
             <a href="{{ prefijo }}/en/index.html">English</a>
         {% endif %}
 
         {% if lengua !== "es" %}
-            <a href="{{ prefijo }}/es/index.html">Español</a>
+            <a href="{{ prefijo }}/index.html">Español</a>
         {% endif %}
 
         {% if lengua !== "it" %}
-            <a href="{{ prefijo }}/index.html">Italiano</a>
+            <a href="{{ prefijo }}/it/index.html">Italiano</a>
         {% endif %}
 
     </div>
