--- a/scss/header.scss
+++ b/scss/header.scss
@@ -1,5 +1,3 @@
-
-
 header {
     position: relative;
     display: flex;
@@ -7,6 +5,7 @@ header {
     background-color: rgba(0, 0, 10, 0.1);
     justify-content: space-between;
     //border-radius: 20px;
+    padding: 10px;
 }
 
     
@@ -15,11 +14,14 @@ header {
     flex-grow: 1;
     flex-shrink: 2;
     flex-basis: 160px;
-    margin: 0;
+    margin: 10px;
     padding: 0;
     border-radius: 50%;
     overflow: hidden;
     box-sizing: content-box;
+    margin: auto;
+    
+    max-width: 230px;
 }
 
 
@@ -30,6 +32,7 @@ header {
     display: block;
     filter: grayscale(100%);
     //filter: sepia(50%);
+    
 }
 
 
@@ -39,15 +42,15 @@ header {
     text-transform: uppercase;
     padding: 0 20px 0 20px;
     //border: 1px solid red;
-    text-align: center;
+    text-align: left;
     margin-top: 10px;
 
 
     & .nombre {
-        font-size: 2em;
-        font-family: $title_font;
-        line-height: 1em;
 
+        font-family: $title_font;
+        font-size: 2em;
+        line-height: 1em;
         margin-top: 10px;
         margin-bottom: 20px;
         white-space: wrap;
