--- a/src/index.njk
+++ b/src/index.njk
@@ -1,8 +1,7 @@
 ---
-"lengua": "it"
-"posicion": "Web Designer"
-"espana" : "Spagna"
-"nacido" : "nato a"
+"lengua": "es"
+"posicion": "creador web"
+"espana" : "España"
 "prefijo" : "."
 ---
 
@@ -14,33 +13,25 @@
 {% block content %}
   <div class="box-container">
 
-
     {% include "./componentes/header.njk" %}
-    {% include "./componentes/it/main.njk" %}
-    {% include "./componentes/it/footer.njk" %}
+    {% include "./componentes/es/main.njk" %}
+    {% include "./componentes/es/footer.njk" %}
 
-
-    
     <div class="thiscv">
-      <small>Per la creazione di questo curriculm ho usato:<br> HTML5 & SASS e nunjucks come template engine.
+      <small>Para la creación de este resumen he usado:<br> HTML5 & SASS y nunjucks como template engine.
       <spam><br>
-      Puoi vederlo online:
+      Puedes verlo online:
 
-          <a href="https://andfres.github.io/cv/" class="code">
-              https://andfres.github.io/cv/
-          </a>
+        <a href="https://andfres.github.io/cv/" class="code">
+            https://andfres.github.io/cv/
+        </a>
+
       </spam>
       </small>
     </div>
 
 
-
-    <div class="autorizo">
-        <small>Autorizzo il trattamento dei miei dati personali ai sensi del Dlgs 196 del 30 giugno 2003.</small>
-    </div>
-
-
-  </div> <!-- end box container -->
+  </div>
 
 {% endblock %}
 
